--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,25 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent">
+
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:orientation="horizontal"
         android:id="@+id/phone_number_layout"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="5dp"
         android:layout_height="wrap_content">
     <TextView
-        android:paddingTop="30dp"
-        android:paddingLeft="5dp"
         android:id="@+id/phone_num_label"
         android:text="@string/phone_number"
         android:layout_width="wrap_content"
@@ -30,14 +34,14 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:orientation="horizontal"
         android:layout_below="@id/phone_number_layout"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="5dp"
         android:id="@+id/how_many_layout"
         android:layout_height="wrap_content">
         <TextView
-            android:paddingTop="30dp"
-            android:paddingLeft="5dp"
             android:id="@+id/how_many_label"
             android:text="@string/how_many_times"
             android:layout_width="wrap_content"
@@ -52,15 +56,15 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:orientation="horizontal"
         android:layout_below="@id/how_many_layout"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="5dp"
         android:id="@+id/message_layout"
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/message_label"
-            android:paddingTop="30dp"
-            android:paddingLeft="5dp"
             android:text="@string/message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -68,16 +72,30 @@
         <EditText
             android:hint="@string/message"
             android:id="@+id/message_edit_text"
+            android:lines="5"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
 
     <Button
-        android:layout_below="@id/message_layout"
+        android:padding="20dp"
         android:id="@+id/send_button"
+        android:layout_below="@id/message_layout"
         android:layout_centerHorizontal="true"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
+        android:textColor="@color/white"
         android:layout_height="wrap_content"
+        android:background="@drawable/send_button"
         android:text="SEND"
         />
+
+    <ProgressBar
+        android:id="@+id/spinner"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        />
+
 </RelativeLayout>
+</ScrollView>
