--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,119 +1,131 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:layout_height="fill_parent"
-    android:layout_width="fill_parent">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:orientation="horizontal"
-        android:id="@+id/phone_number_layout"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="5dp"
-        android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/phone_num_label"
-        android:text="@string/phone_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <EditText
-        android:hint="@string/phone_number"
-        android:id="@+id/phone_number_edit_text"
-        android:inputType="phone"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:orientation="horizontal"
-        android:layout_below="@id/phone_number_layout"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="5dp"
-        android:id="@+id/how_many_layout"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/how_many_label"
-            android:text="@string/how_many_times"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <EditText
-            android:hint="@string/how_many_times"
-            android:id="@+id/how_many_edit_text"
-            android:inputType="number"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:orientation="horizontal"
-        android:layout_below="@id/how_many_layout"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="5dp"
-        android:id="@+id/message_layout"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/message_label"
-            android:text="@string/message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <EditText
-            android:hint="@string/im_sorry"
-            android:id="@+id/message_edit_text"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-
-    <Button
-        android:padding="20dp"
-        android:layout_marginTop="10dp"
-        android:id="@+id/send_button"
-        android:layout_below="@id/message_layout"
-        android:layout_centerHorizontal="true"
-        android:layout_width="fill_parent"
-        android:textColor="@color/white"
-        android:layout_height="wrap_content"
-        android:background="@drawable/send_button"
-        android:text="SEND"
-        />
-
-    <TextView
-        android:id="@+id/send_button_text"
-        android:text="@string/explanation"
-        android:layout_below="@id/send_button"
-        android:layout_centerHorizontal="true"
-        android:textColor="@color/gray"
-        android:textSize="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <ProgressBar
-        android:id="@+id/spinner"
-        android:visibility="gone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        />
-
-    <fragment
-        android:id="@+id/adFragment"
-        android:layout_below="@id/send_button_text"
-        android:name="com.personal.saifkhan.iapologize.AdFragment"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" />
+        tools:context=".MainActivity">
 
-</RelativeLayout>
+        <LinearLayout
+            android:id="@+id/phone_number_layout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/phone_num_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/phone_number"/>
+
+            <EditText
+                android:id="@+id/phone_number_edit_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxWidth="165dp"
+                android:hint="@string/phone_number"
+                android:inputType="phone"/>
+
+            <Button
+                android:id="@+id/select_contact"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="10sp"
+                android:text="Contacts"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/how_many_layout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/phone_number_layout"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/how_many_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/how_many_times"/>
+
+            <EditText
+                android:id="@+id/how_many_edit_text"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/how_many_times"
+                android:inputType="number"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/message_layout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/how_many_layout"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/message_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/message"/>
+
+            <EditText
+                android:id="@+id/message_edit_text"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/im_sorry"/>
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/send_button"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/message_layout"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/send_button"
+            android:padding="20dp"
+            android:text="SEND"
+            android:textColor="@color/white"
+            />
+
+        <TextView
+            android:id="@+id/send_button_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/send_button"
+            android:layout_centerHorizontal="true"
+            android:text="@string/explanation"
+            android:textColor="@color/gray"
+            android:textSize="10dp"/>
+
+        <ProgressBar
+            android:id="@+id/spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone"
+            />
+
+        <fragment
+            android:id="@+id/adFragment"
+            android:name="com.personal.saifkhan.iapologize.AdFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_below="@id/send_button_text"/>
+
+    </RelativeLayout>
 </ScrollView>
